fix(automate-linking): incorrect order of resulting fields (#120)
Closes: MODELINKS-110